# shipzo_divide

./: README.md  pyproject.toml
src/shipzo_divide/: shipzo_divide.py
